<resources>
    <string name="app_name">Resources</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Anubhav Jaiswal</string>
    <string name="nav_header_subtitle">anubhavjaiswal2002@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gitRepos">Git Repositories</string>
    <string name="menu_coding">Coding</string>
    <string name="menu_infoGathering">Info Gathering</string>
    <string name="menu_trading">Trading</string>
    <string name="menu_earn">Earn</string>
    <string name="menu_moreTools">More tools</string>
    <string name="menu_webDev">Web Development</string>
    <string name="menu_general">General</string>
    <string name="menu_projectIdeas">Project Ideas</string>
    <string name="menu_vsCodePlugins">VS Code Plugins </string>
    <string name="menu_downloads">Downloads</string>
    <string name="menu_codingGames">Coding Games</string>
    <string name="menu_usefullIDEExtensions">Usefull IDE Extensions</string>
    <string name="demo">alpha beta gamma</string>
    <string name="sub_3d">3-D Modeling Tools</string>
    <string name="sub_prototyping">Prototyping Tools</string>
    <string name="sub_screenshot">Screenshot Tools</string>
    <string name="sub_sketching">Sketching Tools</string>
    <string name="sub_smm">SMM Tools</string>
    <string name="sub_sound">Sound Design Tools</string>
    <string name="sub_stock_photo">Stock Photo Tools</string>
    <string name="sub_stock_video">Stock Video Tools</string>
    <string name="sub_learn_design">Learn Design</string>
    <string name="sub_ui">UI Design Tools</string>
    <string name="sub_user_flow">User Flow Tools</string>
    <string name="sub_user_research">User Research Tools</string>
    <string name="sub_visual_debug">Visual Debugging Tools</string>
    <string name="sub_wireframing">Wireframing Tools</string>
    <string name="menu_contact">Contact</string>
    <!--    <string name="menu_"></string>-->
    <!--    <string name="menu_"></string>-->
    <!--    <string name="menu_"></string>-->
    <!--    <string name="menu_"></string>-->
    <!--    <string name="menu_"></string>-->
    <!--    <string name="menu_"></string>-->
    <!--    <string name="menu_"></string>-->
    <!--    <string name="menu_"></string>-->
    <string name="loreum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quis ornare dui. Praesent et fermentum dolor. Aliquam sit amet hendrerit diam, ut sagittis ante. Ut commodo, tortor euismod dignissim maximus, ligula nisl rhoncus felis, et volutpat nisl lectus varius purus. Sed tempor lacus nec vehicula fermentum. Maecenas nulla enim, maximus nec facilisis faucibus, sagittis quis ante. Pellentesque sit amet dolor.</string>
    <string name="menu_settings">Settings</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>