<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.resourcesapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gitRepos"
        android:name="com.example.resourcesapp.ui.gitRepos.GitReposFragment"
        android:label="@string/menu_gitRepos"
        tools:layout="@layout/fragment_gitrepos" />

    <fragment
        android:id="@+id/nav_coding"
        android:name="com.example.resourcesapp.ui.coding.CodingFragment"
        android:label="@string/menu_coding"
        tools:layout="@layout/fragment_coding" />
    <fragment
        android:id="@+id/nav_moreTools"
        android:name="com.example.resourcesapp.ui.moreTools.MoreToolsFragment"
        android:label="@string/menu_moreTools"
        tools:layout="@layout/fragment_more_tools" />
    <fragment
        android:id="@+id/nav_genral"
        android:name="com.example.resourcesapp.ui.miscellaneous.MiscellaneousFragment"
        android:label="@string/menu_miscellaneous"
        tools:layout="@layout/fragment_miscellaneous" />
    <fragment
        android:id="@+id/nav_earn"
        android:name="com.example.resourcesapp.ui.earn.EarnFragment"
        android:label="@string/menu_earn"
        tools:layout="@layout/fragment_earn" />
    <fragment
        android:id="@+id/nav_trading"
        android:name="com.example.resourcesapp.ui.trading.TradingFragment"
        android:label="@string/menu_trading"
        tools:layout="@layout/fragment_trading" />
    <fragment
        android:id="@+id/nav_infoGathering"
        android:name="com.example.resourcesapp.ui.infoGathering.InfoGatheringFragment"
        android:label="@string/menu_infoGathering"
        tools:layout="@layout/fragment_info_gathering" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.resourcesapp.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_downloads"
        android:name="com.example.resourcesapp.ui.downloads.DownloadsFragment"
        android:label="@string/menu_downloads"
        tools:layout="@layout/fragment_downloads" />
    <fragment
        android:id="@+id/nav_projectIdeas"
        android:name="com.example.resourcesapp.ui.projectIdeas.ProjectIdeasFragment"
        android:label="@string/menu_projectIdeas"
        tools:layout="@layout/fragment_project_ideas" />
</navigation>