<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group
        android:id="@+id/main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gitRepos"
            android:icon="@drawable/ic_menu_github"
            android:title="@string/menu_gitRepos" />
        <item
            android:id="@+id/nav_coding"
            android:icon="@drawable/ic_menu_code"
            android:title="@string/menu_coding" />
        <item
            android:icon="@drawable/ic_menu_tool"
            android:title="@string/menu_tools" />
        <item
            android:icon="@drawable/ic_menu_missc"
            android:title="@string/menu_miscellaneous" />
        <item
            android:icon="@drawable/ic_menu_earn"
            android:title="@string/menu_earn" />
        <item
            android:icon="@drawable/ic_menu_trade"
            android:title="@string/menu_trading" />
        <item
            android:icon="@drawable/ic_menu_infogathering"
            android:title="@string/menu_infoGathering" />
    </group>
    <group android:id="@+id/controls" >
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
    </group>
    <group android:id="@+id/hidden">
        <item android:title="Item" />
        <item android:title="Item" />
        <item android:title="Item" />
    </group>

</menu>